---
source: tests/unary.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"

@int_format_string = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1
@float_format_string = private unnamed_addr constant [4 x i8] c"%f\0A\00", align 1
@string_format_string = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1
@int_format_string.1 = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1
@float_format_string.2 = private unnamed_addr constant [4 x i8] c"%f\0A\00", align 1
@string_format_string.3 = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1

define i32 @main() {
entry:
  %y = alloca i64, align 8
  %x = alloca i64, align 8
  store i64 9221120237041090570, ptr %x, align 4
  store i64 9221120237041090580, ptr %y, align 4
  %x1 = load i64, ptr %x, align 4
  %check_qnan = and i64 %x1, 9221120237041090560
  %is_float = icmp ne i64 %check_qnan, 9221120237041090560
  %i64_to_f64 = bitcast i64 %x1 to double
  %extract_payload = and i64 %x1, 281474976710655
  %sign_bit = lshr i64 %extract_payload, 47
  %is_negative = icmp eq i64 %sign_bit, 1
  %sign_extend = or i64 %extract_payload, -281474976710656
  %signed_payload = select i1 %is_negative, i64 %sign_extend, i64 %extract_payload
  %payload_to_f64 = sitofp i64 %signed_payload to double
  %final_payload = select i1 %is_float, double %i64_to_f64, double %payload_to_f64
  %neg = fsub double 0.000000e+00, %final_payload
  %check_qnan2 = and i64 %x1, 9221120237041090560
  %is_float3 = icmp ne i64 %check_qnan2, 9221120237041090560
  %tag_bits = and i64 %x1, 1970324836974592
  %tag = lshr i64 %tag_bits, 48
  %is_bool = icmp eq i64 %tag, 1
  %is_string = icmp eq i64 %tag, 2
  %is_list = icmp eq i64 %tag, 3
  %map_bool = select i1 %is_bool, i64 2, i64 %tag
  %map_string = select i1 %is_string, i64 3, i64 %map_bool
  %map_list = select i1 %is_list, i64 4, i64 %map_string
  %final_tag = select i1 %is_float3, i64 1, i64 %map_list
  %is_float_tag = icmp eq i64 %final_tag, 1
  %float_to_i64 = bitcast double %neg to i64
  %is_bool4 = icmp eq i64 %final_tag, 2
  %is_string5 = icmp eq i64 %final_tag, 3
  %is_list6 = icmp eq i64 %final_tag, 4
  %tag_temp1 = select i1 %is_bool4, i64 1, i64 0
  %tag_temp2 = select i1 %is_string5, i64 2, i64 %tag_temp1
  %internal_tag = select i1 %is_list6, i64 3, i64 %tag_temp2
  %payload_to_i64 = fptosi double %neg to i64
  %payload_masked = and i64 %payload_to_i64, 281474976710655
  %tag_shifted = shl i64 %internal_tag, 48
  %with_qnan = or i64 9221120237041090560, %tag_shifted
  %nanboxed = or i64 %with_qnan, %payload_masked
  %pyobject = select i1 %is_float_tag, i64 %float_to_i64, i64 %nanboxed
  %y7 = load i64, ptr %y, align 4
  %check_qnan8 = and i64 %y7, 9221120237041090560
  %is_float9 = icmp ne i64 %check_qnan8, 9221120237041090560
  %i64_to_f6410 = bitcast i64 %y7 to double
  %extract_payload11 = and i64 %y7, 281474976710655
  %sign_bit12 = lshr i64 %extract_payload11, 47
  %is_negative13 = icmp eq i64 %sign_bit12, 1
  %sign_extend14 = or i64 %extract_payload11, -281474976710656
  %signed_payload15 = select i1 %is_negative13, i64 %sign_extend14, i64 %extract_payload11
  %payload_to_f6416 = sitofp i64 %signed_payload15 to double
  %final_payload17 = select i1 %is_float9, double %i64_to_f6410, double %payload_to_f6416
  %neg18 = fsub double 0.000000e+00, %final_payload17
  %check_qnan19 = and i64 %y7, 9221120237041090560
  %is_float20 = icmp ne i64 %check_qnan19, 9221120237041090560
  %tag_bits21 = and i64 %y7, 1970324836974592
  %tag22 = lshr i64 %tag_bits21, 48
  %is_bool23 = icmp eq i64 %tag22, 1
  %is_string24 = icmp eq i64 %tag22, 2
  %is_list25 = icmp eq i64 %tag22, 3
  %map_bool26 = select i1 %is_bool23, i64 2, i64 %tag22
  %map_string27 = select i1 %is_string24, i64 3, i64 %map_bool26
  %map_list28 = select i1 %is_list25, i64 4, i64 %map_string27
  %final_tag29 = select i1 %is_float20, i64 1, i64 %map_list28
  %is_float_tag30 = icmp eq i64 %final_tag29, 1
  %float_to_i6431 = bitcast double %neg18 to i64
  %is_bool32 = icmp eq i64 %final_tag29, 2
  %is_string33 = icmp eq i64 %final_tag29, 3
  %is_list34 = icmp eq i64 %final_tag29, 4
  %tag_temp135 = select i1 %is_bool32, i64 1, i64 0
  %tag_temp236 = select i1 %is_string33, i64 2, i64 %tag_temp135
  %internal_tag37 = select i1 %is_list34, i64 3, i64 %tag_temp236
  %payload_to_i6438 = fptosi double %neg18 to i64
  %payload_masked39 = and i64 %payload_to_i6438, 281474976710655
  %tag_shifted40 = shl i64 %internal_tag37, 48
  %with_qnan41 = or i64 9221120237041090560, %tag_shifted40
  %nanboxed42 = or i64 %with_qnan41, %payload_masked39
  %pyobject43 = select i1 %is_float_tag30, i64 %float_to_i6431, i64 %nanboxed42
  %check_qnan44 = and i64 %pyobject, 9221120237041090560
  %is_float45 = icmp ne i64 %check_qnan44, 9221120237041090560
  %tag_bits46 = and i64 %pyobject, 1970324836974592
  %tag47 = lshr i64 %tag_bits46, 48
  %is_bool48 = icmp eq i64 %tag47, 1
  %is_string49 = icmp eq i64 %tag47, 2
  %is_list50 = icmp eq i64 %tag47, 3
  %map_bool51 = select i1 %is_bool48, i64 2, i64 %tag47
  %map_string52 = select i1 %is_string49, i64 3, i64 %map_bool51
  %map_list53 = select i1 %is_list50, i64 4, i64 %map_string52
  %final_tag54 = select i1 %is_float45, i64 1, i64 %map_list53
  %check_qnan55 = and i64 %pyobject43, 9221120237041090560
  %is_float56 = icmp ne i64 %check_qnan55, 9221120237041090560
  %tag_bits57 = and i64 %pyobject43, 1970324836974592
  %tag58 = lshr i64 %tag_bits57, 48
  %is_bool59 = icmp eq i64 %tag58, 1
  %is_string60 = icmp eq i64 %tag58, 2
  %is_list61 = icmp eq i64 %tag58, 3
  %map_bool62 = select i1 %is_bool59, i64 2, i64 %tag58
  %map_string63 = select i1 %is_string60, i64 3, i64 %map_bool62
  %map_list64 = select i1 %is_list61, i64 4, i64 %map_string63
  %final_tag65 = select i1 %is_float56, i64 1, i64 %map_list64
  %lhs_is_string = icmp eq i64 %final_tag54, 3
  %rhs_is_string = icmp eq i64 %final_tag65, 3
  %both_strings = and i1 %lhs_is_string, %rhs_is_string
  br i1 %both_strings, label %str_concat, label %arithmetic

str_concat:                                       ; preds = %entry
  %extract_ptr_payload = and i64 %pyobject, 281474976710655
  %payload_to_ptr = inttoptr i64 %extract_ptr_payload to ptr
  %extract_ptr_payload66 = and i64 %pyobject43, 281474976710655
  %payload_to_ptr67 = inttoptr i64 %extract_ptr_payload66 to ptr
  %lhs_len = call i64 @strlen(ptr %payload_to_ptr)
  %rhs_len = call i64 @strlen(ptr %payload_to_ptr67)
  %total_len = add i64 %lhs_len, %rhs_len
  %total_size = add i64 %total_len, 1
  %malloc_concat = call ptr @malloc(i64 %total_size)
  %memcpy_lhs = call ptr @memcpy(ptr %malloc_concat, ptr %payload_to_ptr, i64 %lhs_len)
  %rhs_dest = getelementptr i8, ptr %malloc_concat, i64 %lhs_len
  %rhs_copy_len = add i64 %rhs_len, 1
  %memcpy_rhs = call ptr @memcpy(ptr %rhs_dest, ptr %payload_to_ptr67, i64 %rhs_copy_len)
  %ptr_to_int = ptrtoint ptr %malloc_concat to i64
  %ptr_payload = and i64 %ptr_to_int, 281474976710655
  %pyobject_string = or i64 9221683186994511872, %ptr_payload
  br label %add_merge

arithmetic:                                       ; preds = %entry
  %check_qnan68 = and i64 %pyobject, 9221120237041090560
  %is_float69 = icmp ne i64 %check_qnan68, 9221120237041090560
  %i64_to_f6470 = bitcast i64 %pyobject to double
  %extract_payload71 = and i64 %pyobject, 281474976710655
  %sign_bit72 = lshr i64 %extract_payload71, 47
  %is_negative73 = icmp eq i64 %sign_bit72, 1
  %sign_extend74 = or i64 %extract_payload71, -281474976710656
  %signed_payload75 = select i1 %is_negative73, i64 %sign_extend74, i64 %extract_payload71
  %payload_to_f6476 = sitofp i64 %signed_payload75 to double
  %final_payload77 = select i1 %is_float69, double %i64_to_f6470, double %payload_to_f6476
  %check_qnan78 = and i64 %pyobject43, 9221120237041090560
  %is_float79 = icmp ne i64 %check_qnan78, 9221120237041090560
  %i64_to_f6480 = bitcast i64 %pyobject43 to double
  %extract_payload81 = and i64 %pyobject43, 281474976710655
  %sign_bit82 = lshr i64 %extract_payload81, 47
  %is_negative83 = icmp eq i64 %sign_bit82, 1
  %sign_extend84 = or i64 %extract_payload81, -281474976710656
  %signed_payload85 = select i1 %is_negative83, i64 %sign_extend84, i64 %extract_payload81
  %payload_to_f6486 = sitofp i64 %signed_payload85 to double
  %final_payload87 = select i1 %is_float79, double %i64_to_f6480, double %payload_to_f6486
  %lhs_is_float = icmp eq i64 %final_tag54, 1
  %rhs_is_float = icmp eq i64 %final_tag65, 1
  %result_is_float = or i1 %lhs_is_float, %rhs_is_float
  %addtmp = fadd double %final_payload77, %final_payload87
  %result_tag = select i1 %result_is_float, i64 1, i64 0
  %is_float_tag88 = icmp eq i64 %result_tag, 1
  %float_to_i6489 = bitcast double %addtmp to i64
  %is_bool90 = icmp eq i64 %result_tag, 2
  %is_string91 = icmp eq i64 %result_tag, 3
  %is_list92 = icmp eq i64 %result_tag, 4
  %tag_temp193 = select i1 %is_bool90, i64 1, i64 0
  %tag_temp294 = select i1 %is_string91, i64 2, i64 %tag_temp193
  %internal_tag95 = select i1 %is_list92, i64 3, i64 %tag_temp294
  %payload_to_i6496 = fptosi double %addtmp to i64
  %payload_masked97 = and i64 %payload_to_i6496, 281474976710655
  %tag_shifted98 = shl i64 %internal_tag95, 48
  %with_qnan99 = or i64 9221120237041090560, %tag_shifted98
  %nanboxed100 = or i64 %with_qnan99, %payload_masked97
  %pyobject101 = select i1 %is_float_tag88, i64 %float_to_i6489, i64 %nanboxed100
  br label %add_merge

add_merge:                                        ; preds = %arithmetic, %str_concat
  %add_result = phi i64 [ %pyobject_string, %str_concat ], [ %pyobject101, %arithmetic ]
  %check_qnan102 = and i64 %add_result, 9221120237041090560
  %is_float103 = icmp ne i64 %check_qnan102, 9221120237041090560
  %tag_bits104 = and i64 %add_result, 1970324836974592
  %tag105 = lshr i64 %tag_bits104, 48
  %is_bool106 = icmp eq i64 %tag105, 1
  %is_string107 = icmp eq i64 %tag105, 2
  %is_list108 = icmp eq i64 %tag105, 3
  %map_bool109 = select i1 %is_bool106, i64 2, i64 %tag105
  %map_string110 = select i1 %is_string107, i64 3, i64 %map_bool109
  %map_list111 = select i1 %is_list108, i64 4, i64 %map_string110
  %final_tag112 = select i1 %is_float103, i64 1, i64 %map_list111
  %check_qnan113 = and i64 %add_result, 9221120237041090560
  %is_float114 = icmp ne i64 %check_qnan113, 9221120237041090560
  %i64_to_f64115 = bitcast i64 %add_result to double
  %extract_payload116 = and i64 %add_result, 281474976710655
  %sign_bit117 = lshr i64 %extract_payload116, 47
  %is_negative118 = icmp eq i64 %sign_bit117, 1
  %sign_extend119 = or i64 %extract_payload116, -281474976710656
  %signed_payload120 = select i1 %is_negative118, i64 %sign_extend119, i64 %extract_payload116
  %payload_to_f64121 = sitofp i64 %signed_payload120 to double
  %final_payload122 = select i1 %is_float114, double %i64_to_f64115, double %payload_to_f64121
  %is_int = icmp eq i64 %final_tag112, 0
  %is_string123 = icmp eq i64 %final_tag112, 3
  br i1 %is_string123, label %print_string, label %check_int

check_int:                                        ; preds = %add_merge
  br i1 %is_int, label %print_int, label %print_float

print_int:                                        ; preds = %check_int
  %to_int = fptosi double %final_payload122 to i64
  %printf_int = call i32 (ptr, ...) @printf(ptr @int_format_string, i64 %to_int)
  br label %print_end

print_float:                                      ; preds = %check_int
  %printf_float = call i32 (ptr, ...) @printf(ptr @float_format_string, double %final_payload122)
  br label %print_end

print_string:                                     ; preds = %add_merge
  %extract_ptr_payload124 = and i64 %add_result, 281474976710655
  %payload_to_ptr125 = inttoptr i64 %extract_ptr_payload124 to ptr
  %printf_string = call i32 (ptr, ...) @printf(ptr @string_format_string, ptr %payload_to_ptr125)
  br label %print_end

print_end:                                        ; preds = %print_string, %print_float, %print_int
  %x126 = load i64, ptr %x, align 4
  %check_qnan127 = and i64 %x126, 9221120237041090560
  %is_float128 = icmp ne i64 %check_qnan127, 9221120237041090560
  %i64_to_f64129 = bitcast i64 %x126 to double
  %extract_payload130 = and i64 %x126, 281474976710655
  %sign_bit131 = lshr i64 %extract_payload130, 47
  %is_negative132 = icmp eq i64 %sign_bit131, 1
  %sign_extend133 = or i64 %extract_payload130, -281474976710656
  %signed_payload134 = select i1 %is_negative132, i64 %sign_extend133, i64 %extract_payload130
  %payload_to_f64135 = sitofp i64 %signed_payload134 to double
  %final_payload136 = select i1 %is_float128, double %i64_to_f64129, double %payload_to_f64135
  %to_int137 = fptosi double %final_payload136 to i64
  %not = xor i64 %to_int137, -1
  %int_payload = and i64 %not, 281474976710655
  %pyobject_int = or i64 9221120237041090560, %int_payload
  %y138 = load i64, ptr %y, align 4
  %check_qnan139 = and i64 %y138, 9221120237041090560
  %is_float140 = icmp ne i64 %check_qnan139, 9221120237041090560
  %i64_to_f64141 = bitcast i64 %y138 to double
  %extract_payload142 = and i64 %y138, 281474976710655
  %sign_bit143 = lshr i64 %extract_payload142, 47
  %is_negative144 = icmp eq i64 %sign_bit143, 1
  %sign_extend145 = or i64 %extract_payload142, -281474976710656
  %signed_payload146 = select i1 %is_negative144, i64 %sign_extend145, i64 %extract_payload142
  %payload_to_f64147 = sitofp i64 %signed_payload146 to double
  %final_payload148 = select i1 %is_float140, double %i64_to_f64141, double %payload_to_f64147
  %to_int149 = fptosi double %final_payload148 to i64
  %not150 = xor i64 %to_int149, -1
  %int_payload151 = and i64 %not150, 281474976710655
  %pyobject_int152 = or i64 9221120237041090560, %int_payload151
  %check_qnan153 = and i64 %pyobject_int, 9221120237041090560
  %is_float154 = icmp ne i64 %check_qnan153, 9221120237041090560
  %tag_bits155 = and i64 %pyobject_int, 1970324836974592
  %tag156 = lshr i64 %tag_bits155, 48
  %is_bool157 = icmp eq i64 %tag156, 1
  %is_string158 = icmp eq i64 %tag156, 2
  %is_list159 = icmp eq i64 %tag156, 3
  %map_bool160 = select i1 %is_bool157, i64 2, i64 %tag156
  %map_string161 = select i1 %is_string158, i64 3, i64 %map_bool160
  %map_list162 = select i1 %is_list159, i64 4, i64 %map_string161
  %final_tag163 = select i1 %is_float154, i64 1, i64 %map_list162
  %check_qnan164 = and i64 %pyobject_int152, 9221120237041090560
  %is_float165 = icmp ne i64 %check_qnan164, 9221120237041090560
  %tag_bits166 = and i64 %pyobject_int152, 1970324836974592
  %tag167 = lshr i64 %tag_bits166, 48
  %is_bool168 = icmp eq i64 %tag167, 1
  %is_string169 = icmp eq i64 %tag167, 2
  %is_list170 = icmp eq i64 %tag167, 3
  %map_bool171 = select i1 %is_bool168, i64 2, i64 %tag167
  %map_string172 = select i1 %is_string169, i64 3, i64 %map_bool171
  %map_list173 = select i1 %is_list170, i64 4, i64 %map_string172
  %final_tag174 = select i1 %is_float165, i64 1, i64 %map_list173
  %check_qnan175 = and i64 %pyobject_int, 9221120237041090560
  %is_float176 = icmp ne i64 %check_qnan175, 9221120237041090560
  %i64_to_f64177 = bitcast i64 %pyobject_int to double
  %extract_payload178 = and i64 %pyobject_int, 281474976710655
  %sign_bit179 = lshr i64 %extract_payload178, 47
  %is_negative180 = icmp eq i64 %sign_bit179, 1
  %sign_extend181 = or i64 %extract_payload178, -281474976710656
  %signed_payload182 = select i1 %is_negative180, i64 %sign_extend181, i64 %extract_payload178
  %payload_to_f64183 = sitofp i64 %signed_payload182 to double
  %final_payload184 = select i1 %is_float176, double %i64_to_f64177, double %payload_to_f64183
  %check_qnan185 = and i64 %pyobject_int152, 9221120237041090560
  %is_float186 = icmp ne i64 %check_qnan185, 9221120237041090560
  %i64_to_f64187 = bitcast i64 %pyobject_int152 to double
  %extract_payload188 = and i64 %pyobject_int152, 281474976710655
  %sign_bit189 = lshr i64 %extract_payload188, 47
  %is_negative190 = icmp eq i64 %sign_bit189, 1
  %sign_extend191 = or i64 %extract_payload188, -281474976710656
  %signed_payload192 = select i1 %is_negative190, i64 %sign_extend191, i64 %extract_payload188
  %payload_to_f64193 = sitofp i64 %signed_payload192 to double
  %final_payload194 = select i1 %is_float186, double %i64_to_f64187, double %payload_to_f64193
  %lhs_to_int = fptosi double %final_payload184 to i64
  %rhs_to_int = fptosi double %final_payload194 to i64
  %or = or i64 %lhs_to_int, %rhs_to_int
  %int_payload195 = and i64 %or, 281474976710655
  %pyobject_int196 = or i64 9221120237041090560, %int_payload195
  %check_qnan197 = and i64 %pyobject_int196, 9221120237041090560
  %is_float198 = icmp ne i64 %check_qnan197, 9221120237041090560
  %tag_bits199 = and i64 %pyobject_int196, 1970324836974592
  %tag200 = lshr i64 %tag_bits199, 48
  %is_bool201 = icmp eq i64 %tag200, 1
  %is_string202 = icmp eq i64 %tag200, 2
  %is_list203 = icmp eq i64 %tag200, 3
  %map_bool204 = select i1 %is_bool201, i64 2, i64 %tag200
  %map_string205 = select i1 %is_string202, i64 3, i64 %map_bool204
  %map_list206 = select i1 %is_list203, i64 4, i64 %map_string205
  %final_tag207 = select i1 %is_float198, i64 1, i64 %map_list206
  %check_qnan208 = and i64 %pyobject_int196, 9221120237041090560
  %is_float209 = icmp ne i64 %check_qnan208, 9221120237041090560
  %i64_to_f64210 = bitcast i64 %pyobject_int196 to double
  %extract_payload211 = and i64 %pyobject_int196, 281474976710655
  %sign_bit212 = lshr i64 %extract_payload211, 47
  %is_negative213 = icmp eq i64 %sign_bit212, 1
  %sign_extend214 = or i64 %extract_payload211, -281474976710656
  %signed_payload215 = select i1 %is_negative213, i64 %sign_extend214, i64 %extract_payload211
  %payload_to_f64216 = sitofp i64 %signed_payload215 to double
  %final_payload217 = select i1 %is_float209, double %i64_to_f64210, double %payload_to_f64216
  %is_int218 = icmp eq i64 %final_tag207, 0
  %is_string219 = icmp eq i64 %final_tag207, 3
  br i1 %is_string219, label %print_string223, label %check_int220

check_int220:                                     ; preds = %print_end
  br i1 %is_int218, label %print_int221, label %print_float222

print_int221:                                     ; preds = %check_int220
  %to_int225 = fptosi double %final_payload217 to i64
  %printf_int226 = call i32 (ptr, ...) @printf(ptr @int_format_string.1, i64 %to_int225)
  br label %print_end224

print_float222:                                   ; preds = %check_int220
  %printf_float227 = call i32 (ptr, ...) @printf(ptr @float_format_string.2, double %final_payload217)
  br label %print_end224

print_string223:                                  ; preds = %print_end
  %extract_ptr_payload228 = and i64 %pyobject_int196, 281474976710655
  %payload_to_ptr229 = inttoptr i64 %extract_ptr_payload228 to ptr
  %printf_string230 = call i32 (ptr, ...) @printf(ptr @string_format_string.3, ptr %payload_to_ptr229)
  br label %print_end224

print_end224:                                     ; preds = %print_string223, %print_float222, %print_int221
  ret i32 0
}

declare i64 @strlen(ptr)

declare ptr @malloc(i64)

declare ptr @memcpy(ptr, ptr, i64)

declare i32 @printf(ptr, ...)
